--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>Ton Nom</h1>
-      <p>Email | Téléphone | Ville, Pays</p>
+      <h1>Methychella Panga</h1>
+      <p>pangamethychella@gmail.com | +243858095102 | Kinshasa, R.D.Congo</p>
       <p><a href="#">LinkedIn</a> | <a href="#">GitHub</a></p>
     </header><section>
   <h2>Profil</h2>
@@ -88,7 +88,7 @@
 <section>
   <h2>Langues</h2>
   <ul>
-    <li>Français – Langue maternelle</li>
+    <li>Français – Bon niveau</li>
     <li>Anglais – Bon niveau</li>
   </ul>
 </section>
