--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 <body>
   <div class="container">
     <header>
-      <h1>Methychella Panga</h1>
-      <p>pangamethychella@gmail.com | +243858095102 | Kinshasa, R.D.Congo</p>
-      <p><a href="#">LinkedIn</a> | <a href="#">GitHub</a></p>
+      <h1>Michelet Mavungu</h1>
+      <p>michelet.dev@gmail.com | +243 970 000 000 | Kinshasa, RDC</p>
+      <p><a href="https://linkedin.com/in/micheletmavungu">LinkedIn</a> | <a href="https://github.com/michelet-dev">GitHub</a></p>
     </header><section>
   <h2>Profil</h2>
-  <p>Développeur web passionné, spécialisé dans la création de sites et applications modernes et efficaces. Orienté solution, avec une forte capacité d'adaptation et de travail en équipe.</p>
+  <p>Développeur web passionné basé à Kinshasa, je crée des solutions numériques modernes, performantes et accessibles. Motivé par la technologie et le travail bien fait, je cherche à évoluer dans des projets stimulants en équipe.</p>
 </section>
 
 <section>
@@ -76,19 +76,19 @@
 
 <section>
   <h2>Expérience professionnelle</h2>
-  <p><strong>Poste 1</strong> – Entreprise (Année - Année)</p>
-  <p>Description des missions principales et des technologies utilisées.</p>
+  <p><strong>Développeur Front-End</strong> – Agence Numérique Kinshasa (2023 - 2024)</p>
+  <p>Création d'interfaces web avec React et TailwindCSS, amélioration des performances des sites clients et intégration responsive.</p>
 </section>
 
 <section>
   <h2>Formation</h2>
-  <p><strong>Diplôme</strong> – Établissement (Année)</p>
+  <p><strong>Licence en Informatique</strong> – Université de Kinshasa (2020 - 2023)</p>
 </section>
 
 <section>
   <h2>Langues</h2>
   <ul>
-    <li>Français – Bon niveau</li>
+    <li>Français – Langue maternelle</li>
     <li>Anglais – Bon niveau</li>
   </ul>
 </section>
@@ -102,4 +102,4 @@
 
   </div>
 </body>
-</html>
+               </html>
