--- a/index.html
+++ b/index.html
@@ -4,53 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CV Professionnel</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-      background: #fff;
-    }
-    header {
-      text-align: center;
-      padding: 20px 0;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      margin: 5px 0;
-      font-size: 1.1em;
-    }
-    section {
-      margin-top: 30px;
-    }
-    h2 {
-      color: #007acc;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 5px;
-    }
-    ul {
-      padding-left: 20px;
-    }
-    .two-columns {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    .column {
-      flex: 0 0 48%;
-      margin-bottom: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
